# av-metrics

./: Cargo.toml
.github/workflows/: ci-build.yml  deploy.yml
av_metrics/: Cargo.toml
av_metrics/benches/: bench.rs
av_metrics/src/: lib.rs
av_metrics/src/video/: decode.rs  mod.rs  pixel.rs  psnr.rs  psnr_hvs.rs  ssim.rs
av_metrics/src/video/ciede/: mod.rs
av_metrics_decoders/: Cargo.toml
av_metrics_decoders/src/: ffmpeg.rs  lib.rs  vapoursynth.rs  y4m.rs
av_metrics_tests/: Cargo.toml
av_metrics_tool/: Cargo.toml
