[workspace]
resolver = "2"
members = [
    "av_metrics",
    "av_metrics_tool",
    "av_metrics_decoders",
    "av_metrics_tests",
]

[workspace.dependencies]
av-metrics = { version = "0.9.1", path = "av_metrics" }
av-metrics-decoders = { version = "0.3.2", path = "av_metrics_decoders" }

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
