[package]
name = "av-metrics-decoders"
version = "0.3.2"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2021"
description = "Decoders for use with av-metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*", "LICENSE"]

[dependencies]
av-metrics = { workspace = true }
anyhow = "1.0.103"
y4m = { version = "0.8", optional = true }

[dependencies.vapoursynth]
version = "0.5"
optional = true

[dependencies.ffmpeg-the-third]
version = "5.0"
optional = true
default-features = false
features = ["codec", "format"]

[features]
vapoursynth = ["dep:vapoursynth"]
ffmpeg = ["dep:ffmpeg-the-third"]
# Link a FFmpeg version built statically
ffmpeg_static = ["ffmpeg-the-third/static"]
# Build FFmpeg statically (https://github.com/zmwangx/rust-ffmpeg-sys/blob/master/Cargo.toml)
ffmpeg_build = ["ffmpeg-the-third/build", "ffmpeg-the-third/build-lib-dav1d"]
