[package]
name = "av-metrics-tool"
version = "0.9.2"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2021"
description = "A CLI tool for measuring audio/video metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*", "LICENSE"]

[dependencies]
av-metrics = { workspace = true, features = ["serde"] }
av-metrics-decoders = { workspace = true }
clap = "4"
console = "0.16"
indicatif = "0.18"
serde = "1"
serde_json = "1"

[features]
default = ["y4m"]
y4m = ["av-metrics-decoders/y4m"]
ffmpeg = ["av-metrics-decoders/ffmpeg"]
